added tooltips for cell configurations

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div class="text sub">Rule Table</div>
     <div id="rule-table"></div>
     <div class="text sub">Simulation</div>
-    <canvas id="surface" width="100px" height="100px"></canvas>
+    <canvas id="surface"></canvas>
 </body>
 </html>
